--- a/site/src/css/constants.css
+++ b/site/src/css/constants.css
@@ -13,3 +13,26 @@
     --text-primary: var(--palette-color-5);
     --text-secondary: var(--palette-color-4);
 }
+
+@media screen and (min-width: 768px) {
+    :root {
+        --font-size-base: 18px;
+        --font-size-lg: 20px;
+        --font-size-sm: 16px;
+        --font-size-display: 5rem;
+
+        --banner-height: 40vh;
+    }
+}
+
+/* Mobile size */
+@media screen and (max-width: 767px) {
+    :root {
+        --font-size-base: 16px;
+        --font-size-lg: 18px;
+        --font-size-sm: 14px;
+        --font-size-display: 2rem;
+
+        --banner-height: 40vh;
+    }
+}
